# occwl

./: pyproject.toml
src/occwl/: base.py  edge.py  face.py
